# dev

./: .codespellignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  CREDITS.md  CRYPTO_FIX_SUMMARY.md  Development.md  EMBEDDED_ENGINE_FIX.md  FINAL_TEST_RESULTS.md  FINAL_TOOL_PARITY_REPORT.md  HANZOD_INTEGRATION.md  HANZOD_INTEGRATION_TEST.md  INTEGRATION_SUMMARY.md  LICENSE  LLM.md  MCP_IMPLEMENTATION_COMPLETE.md  MCP_INTEGRATION.md  Makefile  ORCHESTRATION.md  OSS_PAYMENT_SYSTEM_DESIGN.md  PARITY_ACHIEVEMENT.md  QOS_CHALLENGE_SYSTEM_DESIGN.md  QWEN3_INTEGRATION.md  README.md  REFACTOR_PLAN.md  RUST_PYTHON_PARITY.md  SIMPLIFICATION_PLAN.md  STATUS.md  TEST_FIX_SUMMARY.md  TOOL_PARITY_AUDIT.md  UNIFIED_ARCHITECTURE.md  UPSTREAM_MERGE_STATUS.md  build-fast.sh  comprehensive_test_fix.py  config.template.toml  (+37 more)
code-rs/app-server/: Cargo.toml
code-rs/app-server/src/: code_message_processor.rs  lib.rs  main.rs  message_processor.rs
code-rs/arg0/: Cargo.toml
code-rs/cli/: Cargo.toml
code-rs/cli/src/: lib.rs  login.rs  main.rs  mcp_cmd.rs
code-rs/code-auto-drive-core/: Cargo.toml
code-rs/code-auto-drive-core/src/: controller.rs  faults.rs
code-rs/common/: Cargo.toml
code-rs/common/src/: config_summary.rs  sandbox_mode_cli_arg.rs
code-rs/device-onboarding/: Cargo.toml
code-rs/device-onboarding/src/: crypto.rs  error.rs  lib.rs  pairing.rs  qr.rs
code-rs/device-onboarding/tests/: integration_tests.rs
code-rs/exec/: Cargo.toml
code-rs/exec/src/: cli.rs  experimental_event_processor_with_json_output.rs  main.rs  slash.rs
code-rs/linux-sandbox/: Cargo.toml
code-rs/linux-sandbox/src/: landlock.rs  lib.rs  main.rs
code-rs/qos-challenge/: Cargo.toml
code-rs/qos-challenge/src/: challenge.rs  crypto.rs  economics.rs  error.rs  lib.rs  scoring.rs  types.rs  verification.rs
crates/: Cargo.toml
crates/examples/: parity_demo.rs
crates/hanzo/: Cargo.toml
crates/hanzo-auth/: Cargo.toml
crates/hanzo-batch-orchestrator/: Cargo.toml
crates/hanzo-batch-orchestrator/src/: lib.rs
crates/hanzo-client/: Cargo.toml
crates/hanzo-client/src/: builder.rs  chat.rs  lib.rs  stream.rs
crates/hanzo-conversation/: Cargo.toml
crates/hanzo-conversation/src/: lib.rs
crates/hanzo-memory-manager/: Cargo.toml
crates/hanzo-model-registry/: Cargo.toml
crates/hanzo-model-registry/src/: lib.rs
crates/hanzo-models/: Cargo.toml
crates/hanzo-models/src/: lib.rs
crates/hanzo-protocol/: Cargo.toml
crates/hanzo-protocol/src/: events.rs  lib.rs  wire.rs
crates/hanzo-sandbox/: Cargo.toml
crates/hanzo-tools/: Cargo.toml
crates/hanzo-transport/: Cargo.toml
crates/hanzo-transport/src/: http.rs  lib.rs  websocket.rs
crates/hanzo/src/: cli.rs  (+4 more)
crates/hanzoai/: Cargo.toml
hanzo-dev/: Cargo.toml  LLM.md  Makefile  README.md  config.md
hanzo-dev/ansi-escape/: Cargo.toml
hanzo-dev/app-server/: Cargo.toml
hanzo-dev/app-server-protocol/: Cargo.toml
hanzo-dev/apply-patch/: Cargo.toml
hanzo-dev/arg0/: Cargo.toml
hanzo-dev/backend-client/: Cargo.toml
hanzo-dev/browser/: Cargo.toml
hanzo-dev/chatgpt/: Cargo.toml
hanzo-dev/cli/: Cargo.toml
hanzo-dev/cli-proxy/: Cargo.toml
hanzo-dev/cloud-tasks/: Cargo.toml
hanzo-dev/cloud-tasks-client/: Cargo.toml
hanzo-dev/code-auto-drive-core/: Cargo.toml
hanzo-dev/code-auto-drive-diagnostics/: Cargo.toml
hanzo-dev/code-backend-openapi-models/: Cargo.toml
hanzo-dev/code-version/: Cargo.toml  build.rs
hanzo-dev/common/: Cargo.toml
hanzo-dev/core/: Cargo.toml  README.md  prompt_coder.md  prompt_coordinator.md
hanzo-dev/docs/: codex_mcp_interface.md  protocol_v1.md
hanzo-dev/exec/: Cargo.toml
hanzo-dev/execpolicy/: Cargo.toml
hanzo-dev/file-search/: Cargo.toml
hanzo-dev/git-apply/: Cargo.toml
hanzo-dev/git-tooling/: Cargo.toml
hanzo-dev/linux-sandbox/: Cargo.toml
hanzo-dev/login/: Cargo.toml
hanzo-dev/mcp-client/: Cargo.toml  README.md
hanzo-dev/mcp-server/: Cargo.toml
hanzo-dev/mcp-smoke/: Cargo.toml
hanzo-dev/mcp-test-server/: Cargo.toml
hanzo-dev/mcp-types/: Cargo.toml  README.md
hanzo-dev/ollama/: Cargo.toml
hanzo-dev/otel/: Cargo.toml
hanzo-dev/process-hardening/: Cargo.toml
hanzo-dev/protocol/: Cargo.toml  README.md
hanzo-dev/protocol-ts/: Cargo.toml
hanzo-dev/responses-api-proxy/: Cargo.toml
hanzo-dev/rmcp-client/: Cargo.toml
hanzo-dev/tui/: Cargo.toml  build.rs
hanzo-dev/tunnel-bridge/: Cargo.toml
hanzo-dev/zap/: Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
hanzo-dev/zt/: Cargo.toml
tests/: Cargo.toml  e2e_claude_agents.sh  e2e_dev_agents.sh  e2e_mesh_test.rs  e2e_native_mesh.rs  e2e_zap_mesh_test.rs  genesis.json  local_5node_network.sh  local_mesh_dev.sh  test_fileops.py
tests/runtime/: README.md  conftest.py  test_aci_edit.py  test_bash.py  test_browsergym_envs.py  test_browsing.py  test_docker_images.py  test_env_vars.py  test_glob_and_grep.py  test_images.py  test_ipython.py  test_llm_based_edit.py  test_mcp_action.py  test_microagent.py  test_replay.py  test_runtime_resource.py  test_setup.py  test_stress_remote_runtime.py
tests/unit/: test_acompletion.py  test_action_serialization.py  test_agent_controller.py  test_agent_delegation.py  test_agent_session.py  test_agent_skill.py  test_agents.py  test_arg_parser.py  test_async_utils.py  test_auto_generate_title.py  test_bash_parsing.py  test_bash_ps1_metadata.py  test_bash_session.py  test_bitbucket.py  test_browsing_agent_parser.py  test_chunk_localizer.py  test_cli.py  test_cli_alias_setup.py  test_cli_commands.py  test_cli_default_model.py  test_cli_pause_resume.py  test_cli_settings.py  test_cli_setup_flow.py  test_cli_sid.py  test_cli_suppress_warnings.py  test_cli_thought_order.py  test_cli_tui.py  test_cli_utils.py  test_cli_vi_mode.py  test_cli_workspace.py  test_codeact_agent.py  test_command_success.py  test_condenser.py  test_config.py  test_config_dict_casting.py  test_config_extended.py  test_contextual_events.py  test_control_flags.py  test_conversation.py  test_conversation_memory.py  (+78 more)
(+2468 files in other folders)
