[project]
name = "hanzo-dev"
version = "0.30.1"
description = "Hanzo Dev: Code Less, Make More"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
  { name = "dev", email = "dev@hanzo.ai" }
]
requires-python = ">=3.12,<4.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "anthropic[vertex]",
  "bashlex>=0.18",
  "boto3",
  "browsergym-core==0.13.3",
  "datasets",
  "daytona-sdk==0.11.2",
  "dev-aci>=0.2.7",
  "dirhash",
  "docker",
  "e2b<1.4.0,>=1.0.5",
  "fastapi",
  "gevent>=24.2.1",
  "google-api-python-client<3.0.0,>=2.164",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "google-cloud-aiplatform",
  "google-generativeai",
  "html2text",
  "ipywidgets>=8.1.5",
  "jinja2>=3.1.3",
  "joblib",
  "json-repair",
  "libtmux<0.40,>=0.37",
  "litellm<2.0.0,>=1.60",
  "memory-profiler>=0.61",
  "minio<8.0.0,>=7.2.8",
  "modal<0.74.0,>=0.66.26",
  "numpy",
  "opentelemetry-api==1.25",
  "opentelemetry-exporter-otlp-proto-grpc==1.25",
  "pandas",
  "pathspec>=0.12.1",
  "pexpect",
  "protobuf<5.0.0,>=4.21.6",
  "psutil",
  "pyarrow==19.0.1",
  "pygithub>=2.5",
  "pyjwt>=2.9",
  "pylatexenc",
  "pylcs>=0.1.1",
  "PyPDF2",
  "python-docx",
  "python-dotenv",
  "python-frontmatter>=1.1",
  "python-json-logger>=3.2.1",
  "python-multipart",
  "python-pptx",
  "python-socketio>=5.11.4",
  "qtconsole>=5.6.1",
  "redis>=5.2",
  "runloop-api-client==0.29",
  "seaborn",
  "sse-starlette>=2.1.3",
  "stripe>=11.5",
  "tenacity<10.0,>=8.5",
  "termcolor",
  "toml",
  "tornado",
  "tree-sitter<0.25.0,>=0.24",
  "types-toml",
  "uvicorn",
  "whatthepatch>=1.0.6",
  "zope-interface==7.2",
]
[project.optional-dependencies]
dev = [
  "build",
  "mypy==1.15",
  "pre-commit==4.2",
  "ruff==0.11.2",
]
evaluation = [
  "boto3-stubs[s3]>=1.37.19",
  "browsergym==0.13.3",
  "browsergym-miniwob==0.13.3",
  "browsergym-visualwebarena==0.13.3",
  "browsergym-webarena==0.13.3",
  "commit0",
  "evaluate",
  "func_timeout",
  "gdown",
  "matplotlib",
  "retry",
  "seaborn",
  "streamlit",
  "swebench>=3.0.8",
  "swegym@ git+https://github.com/SWE-Gym/SWE-Bench-Package.git",
  "sympy",
  "tabulate",
  "whatthepatch",
]
runtime = [
  "flake8",
  "jupyter_kernel_gateway",
  "jupyterlab",
  "notebook",
]
test = [
  "openai",
  "pandas",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-forked",
  "pytest-xdist",
  "reportlab",
]
testgeneval = [
  "fuzzywuzzy>=0.18",
  "python-levenshtein<0.28.0,>=0.26.1",
  "rouge>=1.0.1",
  "tree-sitter-python>=0.23.6",
]
[project.urls]
Homepage = "https://github.com/hanzoai/dev"
Repository = "https://github.com/hanzoai/dev"
[project.scripts]
dev = "dev.core.cli:main"

[build-system]
requires = [
  "setuptools",
  "uv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dev*"]
exclude = [
  "cache*",
  "frontend*",
  "workspace*",
  "evaluation*",
  "containers*",
  "dev_config*",
  "microagents*"
]

[tool.autopep8]
ignore = ["E501"]

[tool.black]
skip-string-normalization = true

[tool.ruff.lint]
select = ["D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
default-groups = ["dev", "test", "runtime"]
