[workspace]
members = [
    "hanzo-protocol",
    "hanzo-transport",
    "hanzo-auth",
    "hanzo-models",
    "hanzo-tools",
    "hanzo-sandbox",
    "hanzo-conversation",
    "hanzo-client",
    "hanzoai",
    "hanzo",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
license = "MIT"

[workspace.dependencies]
# Internal crates
hanzo-protocol = { path = "hanzo-protocol" }
hanzo-transport = { path = "hanzo-transport" }
hanzo-auth = { path = "hanzo-auth" }
hanzo-models = { path = "hanzo-models" }
hanzo-tools = { path = "hanzo-tools" }
hanzo-sandbox = { path = "hanzo-sandbox" }
hanzo-conversation = { path = "hanzo-conversation" }
hanzo-client = { path = "hanzo-client" }
hanzoai = { path = "hanzoai" }

# Common dependencies
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1