[workspace]
members = [
    "backend-client",
    "ansi-escape",
    "app-server",
    "app-server-protocol",
    "apply-patch",
    "arg0",
    "cli-proxy",
    "code-auto-drive-core",
    "code-auto-drive-diagnostics",
    "code-backend-openapi-models",
    "cloud-tasks",
    "cloud-tasks-client",
    "cli",
    "common",
    "core",
    "exec",
    "execpolicy",
    "file-search",
    "git-tooling",
    "linux-sandbox",
    "login",
    "mcp-client",
    "mcp-server",
    "mcp-types",
    "ollama",
    "process-hardening",
    "protocol",
    "protocol-ts",
    "rmcp-client",
    "responses-api-proxy",
    "otel",
    "tui",
    "git-apply",
    "utils/json-to-toml",
    "utils/readiness",
    "zap",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"

[workspace.dependencies]
# Internal
hanzo-ansi-escape = { path = "ansi-escape" }
hanzo-app-server = { path = "app-server" }
hanzo-app-server-protocol = { path = "app-server-protocol" }
hanzo-apply-patch = { path = "apply-patch" }
hanzo-arg0 = { path = "arg0" }
hanzo-browser = { path = "browser" }
hanzo-chatgpt = { path = "chatgpt" }
hanzo-common = { path = "common" }
hanzo-core = { path = "core" }
hanzo-backend-client = { path = "backend-client" }
hanzo-backend-openapi-models = { path = "code-backend-openapi-models" }
hanzo-cloud-tasks = { path = "cloud-tasks" }
hanzo-cloud-tasks-client = { path = "cloud-tasks-client" }
hanzo-exec = { path = "exec" }
hanzo-file-search = { path = "file-search" }
hanzo-git-tooling = { path = "git-tooling" }
hanzo-git-apply = { path = "git-apply" }
hanzo-linux-sandbox = { path = "linux-sandbox" }
hanzo-login = { path = "login" }
hanzo-mcp-client = { path = "mcp-client" }
hanzo-mcp-server = { path = "mcp-server" }
hanzo-ollama = { path = "ollama" }
hanzo-process-hardening = { path = "process-hardening" }
hanzo-protocol = { path = "protocol" }
hanzo-protocol-ts = { path = "protocol-ts" }
hanzo-responses-api-proxy = { path = "responses-api-proxy" }
hanzo-rmcp-client = { path = "rmcp-client" }
hanzo-otel = { path = "otel" }
hanzo-tui = { path = "tui" }
hanzo-utils-json-to-toml = { path = "utils/json-to-toml" }
hanzo-utils-readiness = { path = "utils/readiness" }
hanzo-auto-drive-core = { path = "code-auto-drive-core" }
hanzo-zap = { path = "zap" }
mcp-types = { path = "mcp-types", package = "hanzo-mcp-types" }
upstream-mcp-types = { package = "codex-mcp-types", version = "0.63.0" }

# External - Guard for I/O sanitization
hanzo-guard = { version = "0.1.3", features = ["pii", "audit"] }

# External
allocative = "0.3.3"
ansi-to-tui = "8.0.0"
anyhow = "1"
arboard = "3"
askama = "0.12"
assert_cmd = "2"
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
chardetng = "0.1.17"
chrono = "0.4.42"
clap = "4"
clap_complete = "4"
color-eyre = "0.6.3"
crossterm = "0.28.1"
crc32fast = "1.5"
ctor = "0.5.0"
derive_more = "2"
diffy = "0.4.2"
dirs = "6"
dotenvy = "0.15.7"
dunce = "1.0.5"
env-flags = "0.1.1"
env_logger = "0.11.5"
escargot = "0.5"
encoding_rs = "0.8.35"
eventsource-stream = "0.2.3"
filetime = "0.2"
futures = "0.3"
icu_decimal = "2.0.0"
icu_locale_core = "2.0.0"
ignore = "0.4.23"
image = { version = "^0.25.8", default-features = false }
indexmap = "2.6.0"
insta = "1.43.2"
itertools = "0.14.0"
landlock = "0.4.1"
lazy_static = "1"
libc = "0.2.175"
log = "0.4"
maplit = "1.0.2"
mime_guess = "2.0.5"
multimap = "0.10.0"
once_cell = "1"
nucleo-matcher = "0.3.1"
openssl-sys = "*"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = "0.30.0"
os_info = "3.12.0"
owo-colors = "4.2.0"
path-absolutize = "3.1.1"
path-clean = "1.0.1"
pathdiff = "0.2"
portable-pty = "0.9.0"
predicates = "3"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.10"
rand = "0.9"
ratatui = "0.30.0"
regex = "1"
regex-lite = "0.1.7"
reqwest = "0.12"
schemars = "0.8.22"
seccompiler = "0.5.0"
serde = "1"
serde_json = "1"
serde_with = "3.14"
sha1 = "0.10.6"
sha2 = "0.10"
shlex = "1.3.0"
similar = "2.7.0"
starlark = "0.13.0"
strum = "0.27.2"
strum_macros = "0.27.2"
supports-color = "3.0.2"
sys-locale = "0.3.2"
tempfile = "3.23.0"
textwrap = "0.16.2"
thiserror = "2.0.16"
time = "0.3"
tiny_http = "0.12"
tokio = "1"
tokio-stream = "0.1.17"
tokio-test = "0.4"
tokio-util = "0.7.16"
toml = "0.9.5"
toml_edit = "0.23.4"
tonic = "0.13.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
tree-sitter = "0.25.9"
tree-sitter-bash = "0.25.0"
ts-rs = "11"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
url = "2"
urlencoding = "2.1"
uuid = "1"
vt100 = "0.16.2"
walkdir = "2.5.0"
webbrowser = "1.0"
which = "6"
wildmatch = "2.5.0"
wiremock = "0.6"
zeroize = "1.8.1"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
# Changed from "deny" to "warn" to allow gradual cleanup
expect_used = "warn"
identity_op = "warn"
manual_clamp = "warn"
manual_filter = "warn"
manual_find = "warn"
manual_flatten = "warn"
manual_map = "warn"
manual_memcpy = "warn"
manual_non_exhaustive = "warn"
manual_ok_or = "warn"
manual_range_contains = "warn"
manual_retain = "warn"
manual_strip = "warn"
manual_try_fold = "warn"
manual_unwrap_or = "warn"
needless_borrow = "warn"
needless_borrowed_reference = "warn"
needless_collect = "warn"
needless_late_init = "warn"
needless_option_as_deref = "warn"
needless_question_mark = "warn"
needless_update = "warn"
redundant_clone = "warn"
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
redundant_static_lifetimes = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnecessary_filter_map = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_sort_by = "warn"
unnecessary_to_owned = "warn"
unwrap_used = "warn"

# cargo-shear cannot see the platform-specific openssl-sys usage, so we
# silence the false positive here instead of deleting a real dependency.
[workspace.metadata.cargo-shear]
ignored = ["openssl-sys", "hanzo-utils-readiness"]

[profile.release]
lto = "fat"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"

# See https://github.com/openai/codex/issues/1411 for details.
codegen-units = 1

# Custom build profiles used by build-fast.sh
[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true
codegen-units = 256
lto = "off"

[profile.perf]
inherits = "release"
incremental = true
codegen-units = 256
lto = "off"
debug = 2
strip = "none"
split-debuginfo = "packed"

[profile.release-prod]
inherits = "release"
lto = "fat"
strip = "symbols"
codegen-units = 1
