[package]
name = "hanzo-e2e-tests"
version = "0.1.0"
edition = "2021"

[workspace]

[[test]]
name = "e2e_mesh_test"
path = "e2e_mesh_test.rs"

[[test]]
name = "e2e_zap_mesh_test"
path = "e2e_zap_mesh_test.rs"

[[test]]
name = "e2e_native_mesh"
path = "e2e_native_mesh.rs"

[dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# Native high-performance stack (Hanzo Node / Lux Quasar)
blake3 = "1"
getrandom = "0.2"
rand = "0.8"
hex = "0.4"
