[package]
edition = "2024"
name = "hanzo-app-server"
version = { workspace = true }

[[bin]]
name = "hanzo-app-server"
path = "src/main.rs"

[lib]
name = "hanzo_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
hanzo-arg0 = { workspace = true }
hanzo-common = { workspace = true, features = ["cli"] }
hanzo-core = { workspace = true }
hanzo-file-search = { workspace = true }
hanzo-login = { workspace = true }
hanzo-protocol = { workspace = true }
hanzo-utils-json-to-toml = { workspace = true }
# We should only be using mcp-types for JSON-RPC types: it would be nice to
# split this out into a separate crate at some point.
mcp-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
