[package]
edition = "2024"
name = "hanzo-arg0"
version = { workspace = true }

[lib]
name = "hanzo_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
hanzo-apply-patch = { workspace = true }
hanzo-core = { workspace = true }
hanzo-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
