[package]
edition = "2024"
name = "hanzo-exec"
version = { workspace = true }

[[bin]]
name = "dev-exec"
path = "src/main.rs"

[lib]
name = "hanzo_exec"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hanzo-arg0 = { workspace = true }
hanzo-common = { workspace = true, features = [
    "cli",
    "elapsed",
    "sandbox_summary",
] }
hanzo-core = { workspace = true }
hanzo-ollama = { workspace = true }
hanzo-protocol = { workspace = true }
hanzo-app-server-protocol = { workspace = true }
hanzo-auto-drive-core = { workspace = true }
hanzo-git-tooling = { workspace = true }
chrono = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
owo-colors = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shlex = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
once_cell = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }
