[package]
edition = "2024"
name = "code-qos-challenge"
version = { workspace = true }
description = "QoS Challenge System for Hanzo Network compute marketplace"

[lib]
doctest = false
name = "code_qos_challenge"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
blake3 = "1.5"
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
