[package]
name = "hanzo-client"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Unified client for Hanzo AI SDK"
license = "MIT"

[dependencies]
hanzo-protocol = { path = "../hanzo-protocol" }
hanzo-transport = { path = "../hanzo-transport" }
hanzo-auth = { path = "../hanzo-auth" }
hanzo-models = { path = "../hanzo-models" }
hanzo-tools = { path = "../hanzo-tools" }

async-trait = "0.1"
tokio = { version = "1.0", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
futures.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockall = "0.13"
