[package]
name = "hanzo-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Core protocol types for Hanzo AI SDK"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
