[package]
name = "hanzo"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Hanzo AI SDK meta-package with CLI and dev tools"
license = "MIT"

[[bin]]
name = "hanzo"
path = "src/cli.rs"

[dependencies]
# Re-export core
hanzoai = { path = "../hanzoai" }

# Additional dev tools
hanzo-batch-orchestrator = { path = "../hanzo-batch-orchestrator", optional = true }
hanzo-memory-manager = { path = "../hanzo-memory-manager", optional = true }
hanzo-model-registry = { path = "../hanzo-model-registry", optional = true }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
colored = "2.0"
futures.workspace = true
bytes = "1.10.1"

[features]
default = ["dev"]
dev = ["hanzo-batch-orchestrator", "hanzo-memory-manager", "hanzo-model-registry"]

[dev-dependencies]
tempfile = "3.0"
