[package]
name = "hanzoai"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Core Hanzo AI client library - matches Python hanzoai package"
license = "MIT"

[dependencies]
# Core dependencies
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-client = "0.13"

# Internal crates
hanzo-protocol = { path = "../hanzo-protocol" }
hanzo-transport = { path = "../hanzo-transport" }
hanzo-auth = { path = "../hanzo-auth" }
hanzo-models = { path = "../hanzo-models" }
hanzo-tools = { path = "../hanzo-tools" }

# Additional utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
mockall = "0.13"
wiremock = "0.6"