[package]
edition = "2024"
name = "hanzo-ansi-escape"
description = "ANSI escape code handling for Hanzo TUI"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "hanzo_ansi_escape"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ansi-to-tui = { workspace = true }
ratatui = { workspace = true, features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
tracing = { workspace = true, features = ["log"] }
