[package]
name = "hanzo-app-server-protocol"
description = "Protocol types for Hanzo app server"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
hanzo-protocol = { workspace = true }
mcp-types = { workspace = true }
