[package]
edition = "2024"
name = "hanzo-chatgpt"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hanzo-common = { workspace = true, features = ["cli"] }
hanzo-core = { workspace = true }
hanzo-protocol = { workspace = true }
hanzo-app-server-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hanzo-git-apply = { path = "../git-apply" }

[dev-dependencies]
tempfile = { workspace = true }
