[package]
name = "hanzo-cli-proxy"
version = "0.1.0"
edition = "2021"
description = "Multi-CLI to OpenAI-compatible API proxy for subscription-based AI CLIs"
license = "MIT"
authors = ["Hanzo AI <dev@hanzo.ai>"]

[[bin]]
name = "dev-cli-proxy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and environment
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for hanzo engine passthrough)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
anyhow = "1"
thiserror = "1"
