[package]
edition = "2024"
name = "hanzo-dev"
version = { workspace = true }
description = "Hanzo Dev - AI-powered development assistant with GitHub Copilot integration"
license = "MIT"
repository = "https://github.com/hanzoai/dev"
homepage = "https://hanzo.ai/dev"
authors = ["Hanzo AI <dev@hanzo.ai>"]
keywords = ["ai", "cli", "development", "copilot", "assistant"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
publish = true

[[bin]]
name = "dev"
path = "src/main.rs"

[lib]
name = "hanzo_dev"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
hanzo-app-server = { workspace = true }
hanzo-arg0 = { workspace = true }
hanzo-chatgpt = { workspace = true }
hanzo-common = { workspace = true, features = ["cli"] }
hanzo-core = { workspace = true }
hanzo-exec = { workspace = true }
hanzo-login = { workspace = true }
hanzo-mcp-server = { workspace = true }
hanzo-process-hardening = { workspace = true }
hanzo-protocol = { workspace = true }
hanzo-app-server-protocol = { workspace = true }
hanzo-protocol-ts = { workspace = true }
hanzo-responses-api-proxy = { workspace = true }
hanzo-tui = { workspace = true }
hanzo-version = { path = "../code-version" }
hanzo-cloud-tasks = { workspace = true }
ctor = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
regex = "1"
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }
which = { workspace = true }
owo-colors = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-tungstenite = { version = "0.23", default-features = true, features = ["rustls-tls-webpki-roots"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
filetime = { workspace = true }
