[package]
name = "hanzo-cloud-tasks"
description = "Cloud task runner TUI for Hanzo Dev"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = "2024"

[lib]
name = "hanzo_cloud_tasks"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hanzo-common = { path = "../common", features = ["cli"], version = "0.6.74" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
hanzo-cloud-tasks-client = { path = "../cloud-tasks-client", features = ["mock", "online"], version = "0.6.74" }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
tokio-stream = "0.1.17"
chrono = { version = "0.4", features = ["serde"] }
hanzo-login = { path = "../login", version = "0.6.74" }
hanzo-core = { path = "../core", version = "0.6.74" }
throbber-widgets-tui = "0.8.0"
base64 = "0.22"
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
unicode-width = { workspace = true }
unicode-segmentation = "1.12"
hanzo-tui = { path = "../tui", version = "0.6.74" }

[dev-dependencies]
async-trait = "0.1"
