[package]
name = "hanzo-auto-drive-core"
description = "Auto-drive core logic for Hanzo Dev"
edition = "2024"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "hanzo_auto_drive_core"
path = "src/lib.rs"

[features]
# Surface dev fault injection toggles for parity with the existing TUI feature flag.
dev-faults = ["dep:once_cell"]
test-helpers = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
hanzo-common = { path = "../common", features = ["elapsed"], version = "0.6.74" }
hanzo-core = { path = "../core", version = "0.6.74" }
hanzo-git-tooling = { path = "../git-tooling", version = "0.6.74" }
hanzo-protocol = { path = "../protocol", version = "0.6.74" }
futures = { workspace = true }
once_cell = { workspace = true, optional = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["log"] }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
