[package]
name = "hanzo-auto-drive-diagnostics"
description = "Auto-drive diagnostics for Hanzo Dev"
edition = "2024"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "hanzo_auto_drive_diagnostics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
hanzo-auto-drive-core = { path = "../code-auto-drive-core" }
hanzo-core = { path = "../core" }
hanzo-protocol = { path = "../protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
