[package]
edition = "2024"
name = "hanzo-file-search"
version = { workspace = true }

[[bin]]
name = "hanzo-file-search"
path = "src/main.rs"

[lib]
name = "hanzo_file_search"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ignore = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
