[package]
name = "hanzo-git-apply"
description = "Git patch application for Hanzo Dev"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = "2024"

[lib]
name = "hanzo_git_apply"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
