[package]
name = "hanzo-git-tooling"
description = "Git tooling utilities for Hanzo Dev"
version.workspace = true
license = { workspace = true }
repository = { workspace = true }
edition.workspace = true
readme = "README.md"

[lib]
name = "hanzo_git_tooling"
path = "src/lib.rs"

[dependencies]
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = "3"
thiserror = "2"
ts-rs = { workspace = true }
walkdir = "2"

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
