[package]
name = "hanzo-mcp-client"
version = { workspace = true }
edition = "2024"
description = "Async MCP (Model Context Protocol) client for Hanzo AI agents"
license = "MIT"
repository = "https://github.com/hanzoai/dev"
homepage = "https://github.com/hanzoai/dev/tree/main/mcp-client"
documentation = "https://docs.rs/hanzo-mcp-client"
readme = "README.md"
authors = ["Hanzo AI <dev@hanzo.ai>"]
categories = ["network-programming", "asynchronous", "development-tools"]
keywords = ["mcp", "protocol", "ai", "agent", "client"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
mcp-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
